--- a/java/test2.html
+++ b/java/test2.html
@@ -7,7 +7,10 @@
 <script src='script.js'></script>
 </head>
 <body>
+<h1>Projet MSPR</h1>
 <div class='container'>
+<div class='listeAgents'>
+<h2>Liste de nos agents :</h2>
 <ul>
 <li><a href='#'>cberthier<a></li>
 <li><a href='#'>sconnor<a></li>
@@ -18,6 +21,7 @@
 <li><a href='#'>sholmes<a></li>
 <li><a href='#'>jrouletabille<a></li>
 </ul>
+</div>
 </div>
 
  </body> 
