[ADD] Trie par alphabet + equipement par catégories

--- a/java/adupont.html
+++ b/java/adupont.html
@@ -11,13 +11,12 @@
 <div class='boxName'>
 <a>Dupont<a>
 </div>
-<img class='imgAgent' src='img\adupont.png'/>
+<img class='imgAgent' style='padding:10px' src='img\adupont.jpg'/>
 </div>
 <div class='container listeEquipement'>
 <h2>Equipements </h2>
-<div class='Equipement'><a>kit<a></div>
-<div class='Equipement'><a>lacrymo<a></div>
-<div class='Equipement'><a>gaz<a></div>
+<div class='Equipement'><a>Kit oreillette<a></div>
+<div class='Equipement'><a>Bombes lacrymogènes<a></div>
 </div>
 
  </body> 
