--- a/java/cberthier.html
+++ b/java/cberthier.html
@@ -11,13 +11,13 @@
 <div class='boxName'>
 <a>Berthier<a>
 </div>
-<img class='imgAgent' src='img\cberthier.png'/>
+<img class='imgAgent' style='padding:10px' src='img\cberthier.jpg'/>
 </div>
 <div class='container listeEquipement'>
 <h2>Equipements </h2>
-<div class='Equipement'><a>kit<a></div>
-<div class='Equipement'><a>lampe<a></div>
-<div class='Equipement'><a>lacrymo<a></div>
+<div class='Equipement'><a>Kit oreillette<a></div>
+<div class='Equipement'><a>Lampe Torche<a></div>
+<div class='Equipement'><a>Bombes lacrymogènes<a></div>
 </div>
 
  </body> 
