--- a/java/adupont.html
+++ b/java/adupont.html
@@ -2,7 +2,7 @@
 <html lang='fr'>
 <head>
 <meta charset='utf-8'>
-<title>Amaury Dupont</title>
+<title>Dupont Amaury</title>
 <link rel='stylesheet' href='style.css'>
 <script src='script.js'></script>
  </head>
